# spdlog-clang-wraper

./: .gitmodules  CMakeLists.txt
include/spdlogc/: spdlogc.h
src/: spdlogc.cpp
test/: CMakeLists.txt  test.cpp
